--- a/producoes_bibliograficas/templates/producoes_bibliograficas/producoes_bibliograficas.html
+++ b/producoes_bibliograficas/templates/producoes_bibliograficas/producoes_bibliograficas.html
@@ -407,6 +407,7 @@
 {% endblock %}
 
 {% block page_scripts %}
+    {{ block.super }}
     <script src="{% static 'js/producoes_bibliograficas.js' %}"></script>
 {% endblock %}
 
